--- a/jsf_f1blog_web/WebContent/resources/styles/blog.css
+++ b/jsf_f1blog_web/WebContent/resources/styles/blog.css
@@ -123,10 +123,12 @@
   background: white;
   border-radius: 10px;
   margin-bottom: 20px;
+  height: 50%; 
 }
 
 .input-wpis {
   width: 100%;
+  height: 220px;
 }
 
 .input-wpis textarea {
@@ -137,6 +139,7 @@
   border-radius: 10px;
   border: 2px solid black;
   padding: 10px;
+  height: 200px;
 }
 
 .input-wpis textarea:focus,
