--- a/jsf_f1blog_web/WebContent/resources/styles/public.css
+++ b/jsf_f1blog_web/WebContent/resources/styles/public.css
@@ -7,6 +7,10 @@
 
 .public-main,
 .login-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 40vw;
   height: 90vh;
   margin: 5vh 0;
