--- a/jsf_f1blog_web/WebContent/resources/styles/blog.css
+++ b/jsf_f1blog_web/WebContent/resources/styles/blog.css
@@ -60,7 +60,7 @@
 
 .blog-main {
   width: 70vw;
-  min-height: 70vh;
+  min-height: 40vh;
   height: auto;
   margin: 20px;
   text-align: center;
@@ -117,18 +117,15 @@
 .dodaj-wpis {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   margin: 0 auto;
   width: 60vw;
-  background: white;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  height: 50%; 
 }
 
 .input-wpis {
   width: 100%;
-  height: 220px;
+  height: 280px;
 }
 
 .input-wpis textarea {
