--- a/jsf_f1blog_web/WebContent/resources/styles/blog.css
+++ b/jsf_f1blog_web/WebContent/resources/styles/blog.css
@@ -219,10 +219,28 @@
      background: none !important;
 }
 
+tr {
+	border: none !important;
+}
+
 tr th{
 	border: none !important;
 }
 
-tr {
-	border: none !important;
+body .ui-datatable thead th {
+	padding: 0 !important;
+}
+
+body .ui-datatable .ui-datatable-data>tr.ui-datatable-even {
+	background-color: rgba(255, 255, 255, 0.4) !important;
+}
+
+body .ui-datatable .ui-paginator.ui-paginator-top {
+	border-top-left-radius: 10px !important;
+	border-top-right-radius: 10px !important;
+}
+
+body .ui-datatable .ui-paginator.ui-paginator-bottom {
+	border-bottom-left-radius: 10px !important;
+	border-bottom-right-radius: 10px !important;
 }
